Bug 553416: Make nsSVGClipPathFrame notify children when its transform attribute is animated. r=longsonr

--HG--
rename : layout/reftests/svg/smil/lime.svg => layout/reftests/svg/smil/transform/lime.svg